src/main/java/application/dataset/test/invalidRandomAddresses/todo/easy/RandomAddressesWithWrongField.java
package application.dataset.test.invalidRandomAddresses.todo.easy;

public class RandomAddressesWithWrongField {
    // se extrage fieldul care trebuie completat gresit. prima adresa e pt acest field
}
